<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>rbvogui_gazebo</name>
  <version>0.9.0</version>
  <description>Gazebo simulation for Robotnik RB Vogui Robot</description>
  <maintainer email="rmartin@robotnik.es">Rafael Martin</maintainer>

  <license>BSD-2-Clause</license>

  <url type="website">https://robotnik.eu/products/mobile-robots/rb-vogui-en</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rbvogui_sim/issues</url>
  <url type="repository">https://github.com/RobotnikAutomation/rbvogui_sim</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>robotnik_common</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>liburdfdom-tools</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
